poritt/examples/errors/error-pi-not-u.ptt
define foo : (forall (x : U) -> U) = forall (x : U) -> U
